--- a/personal_website/base/templates/base/home.html
+++ b/personal_website/base/templates/base/home.html
@@ -12,12 +12,20 @@
 <body>
     <div class="container">
         <div class="row">
+            <div class="col-md-12">
+                <div class="topnav">
+                    <a href="#profile-wrapper" class="active">Home</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-3">
                 <div id="profile-wrapper" class="card card-body h-100">
                     <img id="profile-pic" src="{% static 'images/headshot.jpg' %}">
                     <hr>
                     <h4>Gavin Uhran</h4>
-                    <p>19 y/o Computer Science major at the University of Notre Dame. I am proficient in Python, C++, and Java, as well as familiar with Swift.</p>
+                    <p>19 y/o Computer Science major at the University of Notre Dame</p>
+                    <p>Ever working on improving my chops in silence</p>
                 </div>
             </div>
             <div class="col-md-9">
@@ -27,53 +35,34 @@
                     <p>I am currently working toward a degree in Computer Science from the College of Engineering at the University of Notre Dame. I am seeking an internship or other opportunity that will allow me to use my collaboration and problem solving skills to improve and develop my abilities in the field of Computer Science.</p>
 
                     <p>My strengths are collaboration, problem-solving, discipline, and determination to improve. These attributes have been built through my studies, past experience, involvement in drumline, and the process of earning my Eagle Scout rank in Boy Scouts. I am excited to put my full effort into a career in software engineering!</p>
-
-                    <ul class="social-links">
-                        <li>
-                            <a href="https://linkedin.com/in/gavinuhran" target="_blank">
-                                <img class="social" src="{% static 'images/mediaFiles/linkedin.png' %}">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/gavinuhran" target="_blank">
-                                <img class="social" src="{% static 'images/mediaFiles/twitter.png' %}">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://instagram.com/gavinuhran" target="_blank">
-                                <img class="social" src="{% static 'images/mediaFiles/instagram.png' %}">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/gavinuhran" target="_blank">
-                                <img class="social" src="{% static 'images/mediaFiles/github.png' %}">
-                            </a>
-                        </li>
-                    </ul>
+                    <h4>Socials</h4>
+                    <hr>
+                        <ul class="social-links">
+                            <li>
+                                <a href="https://linkedin.com/in/gavinuhran" target="_blank">
+                                    <img class="social" src="{% static 'images/mediaFiles/linkedin.png' %}">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/gavinuhran" target="_blank">
+                                    <img class="social" src="{% static 'images/mediaFiles/twitter.png' %}">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://instagram.com/gavinuhran" target="_blank">
+                                    <img class="social" src="{% static 'images/mediaFiles/instagram.png' %}">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/gavinuhran" target="_blank">
+                                    <img class="social" src="{% static 'images/mediaFiles/github.png' %}">
+                                </a>
+                            </li>
+                        </ul>
                 </div>
-            </div>
-        </div>
-        <br>   
-        <div class="row">
-            <div class="col-md-6 h-100">
-                <div class="card card-body"></div>
-            </div>
-            <div class="col-md-6 h-100">
-                <div class="card card-body"></div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-6 h-100">
-                <div class="card card-body"></div>
-            </div>
-            <div class="col-md-6 h-100">
-                <div class="card card-body"></div>
             </div>
         </div>
         <br>
     </div>
-
-
 </body>
 </html>
