--- a/personal_website/staticFiles/css/main.css
+++ b/personal_website/staticFiles/css/main.css
@@ -2,6 +2,25 @@ body {
     background-color: #f8f8f8!important
 }
 
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
 #profile-wrapper {
     text-align: center;
 }
@@ -22,9 +41,11 @@ ul {
 .social-links ul, li {
     list-style-type: none;
     display: inline-block;
+    width: 23%;
+    text-align: center;
 }
 
 .social {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 }
