--- a/personal_website/base/templates/base/home.html
+++ b/personal_website/base/templates/base/home.html
@@ -4,7 +4,8 @@
 <html lang="en">
 <head>
     <title>Gavin Uhran</title>
-    <link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/home.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/navbar.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,7 +15,8 @@
         <div id="top" class="row">
             <div class="col-md-12">
                 <div class="topnav">
-                    <a href="#profile-wrapper" class="active"><strong>Gavin Uhran's Portfolio</strong></a>
+                    <a href="" class="active"><strong>Gavin Uhran's Portfolio</strong></a>
+                    <a href="projects" class="active">Projects</a>
                 </div>
             </div>
         </div>
