--- a/personal_website/base/templates/base/projects.html
+++ b/personal_website/base/templates/base/projects.html
@@ -4,46 +4,78 @@
 <html lang="en">
 <head>
     <title>Gavin Uhran</title>
-    <link href="{% static '/css/projects.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static '/css/navbar.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/project.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/nav.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/footer.css' %}" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
-    <div class="container">
-        <div id="top" class="row">
-            <div class="col-md-12">
-                <div class="topnav">
-                    <a href="/" class="active"><strong>Gavin Uhran's Portfolio</strong></a>
-                    <a href="projects/" class="active">Projects</a>
-                </div>
-            </div>
+<body style="background-color: #8d99ae;">
+    <header>
+        <div class="nav-container">
+            <a href="/">
+                <img class="logo" src="{% static 'images/logo.png' %}" alt="Logo">
+            </a>
+            <nav>
+                <ul>
+                    <li><a class="nav-home" href="/">Home</a></li>
+                    <li><a class="nav-projects" href="/projects/">Projects</a></li>
+                </ul>
+            </nav>
         </div>
+    </header>
+    <div class="container">
         <div id="projects-list" class="row">
             <div class="col-md-12">
                 <div class="card card-body h-100">
-                    <h4>Projects</h4>
-                    <br>
+                    <div class="projects-title-container">
+                        <h3>Projects</h3>
+                        <hr>
+                    </div>
                     <div class="project-list-container">
-                        <div class="project">
-                            <h5 class="project-title">Calculator GUI</h5>
-                            <p class="project-lang">Python/Tkinter</p>
-                            <p class="project-desc">Calculator GUI is a typical 4-function calculator. The GUI is supported through the Python library Tkinter. The back-end processes have a heavy emphasis on recursion.</p>
-                            <p class="project-update">April 30, 2020</p>
-                        </div>
-                        <div class="project">
-                            <h5 class="project-title">Illinois COVID-19 Curve</h5>
-                            <p class="project-lang">Python/Jupyter Notebooks</p>
-                            <p class="project-desc">A data visualization of the change in COVID-19 cases in Illinois by day. All data is from the Illinois Department of Public Health.</p>
-                            <p class="project-update">April 16, 2020</p>
-                        </div>
-                        <div class="project">
-                        </div>
+                        <a class="project-link" href="https://github.com/gavinuhran/Calculator-GUI" target="_blank">
+                            <div class="project">
+                                <h5 class="project-title">Calculator GUI</h5>
+                                <p class="project-lang">Python/Tkinter</p>
+                                <p class="project-desc">Calculator GUI is a typical 4-function calculator. The GUI is supported through the Python library Tkinter. The back-end processes have a heavy emphasis on recursion.</p>
+                                <p class="project-update">April 30, 2020</p>
+                            </div>
+                        </a>
+                        <a class="project-link" href="https://github.com/gavinuhran/Illinois-COVID-19-Data-Visualization"  target="_blank">
+                            <div class="project">
+                                <h5 class="project-title">Illinois COVID-19 Curve</h5>
+                                <p class="project-lang">Python/Jupyter Notebooks</p>
+                                <p class="project-desc">A data visualization of the change in COVID-19 cases in Illinois by day. All data is from the Illinois Department of Public Health.</p>
+                                <p class="project-update">April 16, 2020</p>
+                            </div>
+                        </a>
+                        <a class="project-link" href="https://github.com/gavinuhran/Tetris" target="_blank">
+                            <div class="project">
+                                <h5 class="project-title">Tetris</h5>
+                                <p class="project-lang">Java</p>
+                                <p class="project-desc">A rendition of the popular arcade game "Tetris". The game is heavily dependent on object-oriented programming.</p>
+                                <p class="project-update">May 14, 2018</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
+        <br>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-body h-75">
+                    <footer>
+                        <a href="/projects/">
+                            <h6 class="footer-text">Return to Top</h6>
+                        </a>
+                    </footer>
+                </div>
+            </div>
+        </div>
+        <br>
     </div>
 </body>
 </html>
