--- a/personal_website/base/templates/base/projects.html
+++ b/personal_website/base/templates/base/projects.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <title>Gavin Uhran</title>
-    <link href="{% static '/css/project.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/project1.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static '/css/nav.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static '/css/footer.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body style="background-color: #8d99ae;">
+<body style="background-color: #687288;">
     <header>
         <div class="nav-container">
             <a href="/">
