--- a/personal_website/base/templates/base/home.html
+++ b/personal_website/base/templates/base/home.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <title>Gavin Uhran</title>
-    <link href="{% static '/css/home.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/home1.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static '/css/nav.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static '/css/footer.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
