--- a/personal_website/staticFiles/css/project1.css
+++ b/personal_website/staticFiles/css/project1.css
@@ -1,8 +1,11 @@
 .card {
-    background-color: #edf2f4!important;
+    background-color: #E3EDF0!important;
 }
-h5, h6, p {
-    color: #2b2d42;
+h3 {
+    text-transform: uppercase;
+}
+h3, h5, h6, p {
+    color: #192445;
     font-family: Jost;
 }
 .projects-list-container {
@@ -56,7 +59,7 @@ h5, h6, p {
     text-decoration: none;
 }
 .project:hover {
-    background-color: #edf2f4;
+    background-color: #E3EDF0;
     border-radius: 15px;
     box-shadow: 0px 10px 18px #2b2d42;
 }
